<resources>
    <string name="app_name">Kamer sessie</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="no_group">Not in a party</string>
    <string name="no_session">No active sessions</string>

    <string name="people_party">People in this party:</string>



    <string name="new_party_addperson">Add user</string>
    <string name="new_party_createparty">Create Party</string>
    <string name="new_party_createpartyshort">Create</string>
    <string name="new_party_partyname_hint">Partyname</string>
    <string name="new_party_adduser_hint">Username</string>

    <string name="new_session_createsession">Create Session</string>
    <string name="new_session_createsessionshort">Create</string>
    <string name="new_session_sessionname_hint">Sessionname</string>
    <string name="new_session_location_hint">Location</string>

    <string name="register_button">Register</string>

    <!-- Nav Drawer Menu Items -->
    <string name="nav_home" >Home</string>
    <string name="nav_database">Add to database</string>
    <string name="nav_active">Active sessions</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_new_session">Create new session</string>
    <string name="title_activity_new_party">Create new party</string>
    <string name="title_fragment_party">Partys</string>
    <string name="title_fragment_activesessions">Active Sessions</string>
    <string name="title_activity_party_info">Party Info</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_session_info">SessionInfoActivity</string>

</resources>
