<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thomson2412.kamersessie.activity.NewPartyActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView android:id="@+id/party_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">
        <RelativeLayout android:id="@+id/new_party_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin" >

            <EditText android:id="@+id/partyname" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/new_party_partyname_hint"
                android:inputType="text" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/personUn" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/new_party_adduser_hint"
                android:imeActionId="@+id/new_party_add_new_person"
                android:imeActionLabel="@string/new_party_createpartyshort"
                android:imeOptions="actionUnspecified" android:inputType="text"
                android:maxLines="1" android:singleLine="true" android:layout_below="@+id/partyname"
                android:layout_toLeftOf="@+id/add_person"
                android:layout_toStartOf="@+id/add_person" />

            <Button android:id="@+id/add_person" style="?android:textAppearanceButton"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/new_party_addperson"
                android:layout_below="@+id/partyname"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button android:id="@+id/create_party" style="?android:textAppearanceButton"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:layout_below="@+id/personUn"
                android:text="@string/new_party_createparty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/people_party"
                android:id="@+id/textView2"
                android:layout_below="@+id/create_party"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/party_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/party_form"/>
</RelativeLayout>
