<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thomson2412.kamersessie.NewPSessionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/container_body"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ScrollView android:id="@+id/session_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <LinearLayout android:id="@+id/new_session_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin">

                    <EditText android:id="@+id/sessionname" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/new_session_sessionname_hint"
                        android:inputType="text" android:maxLines="1"
                        android:singleLine="true" />

                    <EditText android:id="@+id/session_location" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/new_session_location_hint"
                        android:imeActionId="@+id/new_session_location_action"
                        android:imeActionLabel="@string/new_session_createsessionshort"
                        android:imeOptions="actionUnspecified" android:inputType="text"
                        android:maxLines="1" android:singleLine="true" />

                    <Button android:id="@+id/create_session" style="?android:textAppearanceButton"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" android:text="@string/new_session_createsession" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
